--- a/MVP.ipynb
+++ b/MVP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJdrX7KxmBuNqCFj8syfFI",
+      "authorship_tag": "ABX9TyO5NBUT57AXhXPcc0Uh2BBW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,8 +42,11 @@
       "source": [
         "# **1. Definição do Problema**\n",
         "\n",
-        "O dataset utilizado neste projeto será o **Student Classification Dataset**, disponibilizado no site Kaggle pelo link a seguir: https://www.kaggle.com/datasets/jacksondivakarr/student-classification-dataset/data\n",
+        "O *dataset* utilizado neste projeto será o ***Student Classification Dataset***, disponibilizado no site Kaggle pelo *link* a seguir: https://www.kaggle.com/datasets/jacksondivakarr/student-classification-dataset/data\n",
         "A base de dados contém informações referentes a alunos de High School.\n",
+        "\n",
+        "O objetivo da escolha do *dataset* é ter uma visão dos alunos e tentar extrair *insights* da base de dados de alunos, podendo ser implementado melhorias no sistema educacional visando uma melhoria da qualidade do ensino. Trata-se de um aprendizado supervisionado.\n",
+        "\n",
         "\n",
         "# Atributos do dataset:\n",
         "\n",
